# discord-stockbot

./: LICENSE  README.md  main.py  pyproject.toml  server.py  ticker.py
.github/: dependabot.yml
.github/workflows/: lint.yml
