[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
discord-py = "^2.3.2"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
fake-useragent = "^1.5.1"
flask = "^3.0.3"
ruff = "^0.4.9"

[tool.ruff.lint]
select = [
  "C90",  # mccabe
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "W",    # warnings
]
ignore = [
  "E501",  # line too long
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
